# btmalloc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  RESULTS.md  bench_common.h  bench_latency.c  bench_micro.c  bench_rss.c  bench_threaded.c  fetch_allocators.sh  prof_churn.c  run.sh  sweep_partitions.sh
docs/: DESIGN.md
include/: btmalloc.h
src/: background.c  btmalloc.c  chunk.c  internal.h  large.c  partition.c  preload.c  size_class.c  tcache.c
tests/: CMakeLists.txt  fuzz_alloc.c  test_basic.c  test_compact.c  test_doublefree.c  test_harden.c  test_preload.c  test_stress.c  test_tiering.c
tools/: fuzz.sh
